# birds-species-classification

./: .gitignore  README.md  pyproject.toml
birds_species_classification/: config.py  helper.py  main.py  model.py  reader.py  trainer.py
